# RLCE

./: .gitignore  README.md
RLCEv1/: CPUcycle.txt  ENCRYPTapi.h  GaloisField.c  Makefile  NISTexample.c  TimeCost.txt  aes.c  api.h  bta.c  config.h  drbg.c  encrypt.c  example.c  fieldMatrix.c  fieldPoly.c  kem.c  list.c  reedsolomon.c  rlce.c  rlce.h  rlceCode.c  rlceKAT.c  rlceOptimized.c  rlceReference.c  rng.c  rng.h  sha.c  test.c  testrsa.c
liboqsRLCE/: CMakeLists.txt  GaloisField.c  README.md  aesandsha.c  bta.c  config.h  drbg.c  fieldMatrix.c  fieldPoly.c  reedsolomon.c  rlce.h  rlceCode.c
